[package]
name = "dog"
version = "0.1.0"
authors = ["Graham Kelly <gkgoat6700@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
flate2 = "1.0.17"
tar = "0.4.30"
error-chain = "0.12.4"
rand = "0.7.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]
